adapt BookDTO and BookMapper to deal with new fields